--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ p{
 .menu .menu-color:hover {
  background-color: var(--brand-color-title);
   color: var(--brand-color-style);
+  box-shadow: 5px 2px 3px 0 #2f303a;
   }
 
 .menu-g .menu-alle:hover{
@@ -74,12 +75,20 @@ p{
 
 
 body {
+  max-width: 1600px;
+    min-height: 320px;
+    width: ; 
+    height: ;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: var(--brand-color-title);
     font-size: 14px;
     line-height: 1.72;
     background-color: greenyellow;
     letter-spacing: 0.03em;
+
+    box-sizing: border-box;
+    display: block;
+
   } 
 
 .contaier {
@@ -114,6 +123,24 @@ header {
   border: 1px solid tomato;
 }
 
+.header-list {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+  list-style: none;
+
+}
+
+.header-free {
+  display: flex;
+  margin-left: 93px
+}
+
 .header-link {
   font-weight: 600;
   font-size: 12px;
@@ -132,13 +159,6 @@ header {
   letter-spacing: 0.1em;
   color: var(--brand-color-title);
   }
-
-.header-nav {
-  list-style: none;
-}
-
-
-
 
 
 
@@ -171,34 +191,63 @@ main {
 /**------------menu---------**/
 
   .menu {
+    
     color: rgb(8, 81, 15);
   }
-  .menu-menu {
+
+  .menu-catalog {
+    width: ;
+    height: ;
+   display: flex; 
+   flex-direction: column;
+
+    /* justify-content: space-between; */
+   /*  flex-wrap: wrap; */
+  }
+
+  
+.menu-menu {
+   
     background-color: aquamarine;
     border: 1px solid red;
     border-radius: 5%;
+    
    /*  margin: 20px; */
 
-  }
-  .menu-alle{
+}
+
+.menu-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:wrap; 
+} 
+
+
+
+.menu-alle{
     background-color: var(--brand-color-title);
     color: var(--brand-color-style);
     border: none;
+    display: flex;
+    justify-content: center;
+      
+
     
-  }
-  .menu-img {
+}
+.menu-img {
     margin: 20px;
     border-radius: 5%;
-  }
+}
 
-  .menu-color {
+.menu-color {
     box-sizing: content-box;
-    width: 200px;
-    padding: 10px;
-    margin: 20px;
+    width: 300px;
+    height: auto;
+   /*  padding: 10px; */
+    margin: 10px;
     background-color: rgb(195, 224, 33); 
     text-align: center; 
-    font-weight: 600;
+   /*  font-weight: 600; */
     font-size: 15px;
     line-heigh:1.36;
     /* color: aqua; */
@@ -206,7 +255,31 @@ main {
     border: 1px solid rgb(12, 158, 17);
     border-radius: 15%;
     letter-spacing: 0.2em;
+    
+
+}
+
+.menu-color-text {
+    box-sizing: content-box;
+    text-align: center;
+} 
+
+
+
+  
+  .menu-list {
+   
+  
   }
+
+  .menu1 {
+   
+  }
+  .menu2 {}
+  .menu3 {}
+  .menu4 {}
+  .menu5 {}
+  .menu6 {}
 
 
   /**-----------Нижня строка-------**/
@@ -214,7 +287,20 @@ main {
     /* color: aliceblue; */
     background-color: var(--brand-color-substrate);
     border: 2px solid rgb(227, 28, 28);
+    font-weight: 400;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    display: flex;
   }
+
+  .adres {
+    color: var(--brand-color-title);
+    display: flex;
+    flex-direction: column;
+    padding-top: 15px;
+
+  }
+
   .footer-link {
     margin: 50px;
     font-weight: 600;
@@ -231,6 +317,10 @@ main {
   margin: 50px;
   
   padding: 20px;
+
+}
+
+.footer-list {
 
 }
 
